--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "6.19.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -33,7 +33,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.3",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
