add prisma 7 in new backend

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,5 @@
-dist/
-generated/
+node_modules
+# Keep environment variables out of version control
 .env
-.DS_Store
-*.log
+
 /src/generated/prisma
-node_modules/
