--- a/backend1/package.json
+++ b/backend1/package.json
@@ -3,36 +3,38 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "tsc -b && node dist/index.js"
+"scripts": {
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^7.0.0",
-    "@types/nodemailer": "^7.0.9",
-    "axios": "^1.13.4",
+    "@prisma/client": "6.19.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
-    "cors": "^2.8.6",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^7.0.13",
-    "prisma": "^7.0.0",
-    "redis": "^5.10.0",
-    "zod": "^4.3.6"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
+    "redis": "^5.9.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
+    "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.1.0",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.3",
+    "prisma": "6.19.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
