--- a/backend1/tsconfig.json
+++ b/backend1/tsconfig.json
@@ -24,7 +24,14 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
 
-  
+    // Style Options
+    // "noImplicitReturns": true,
+    // "noImplicitOverride": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noPropertyAccessFromIndexSignature": true,
+
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
@@ -33,7 +40,5 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  },
-   "include": ["src/**/*", "lib/**/*"],
-  "exclude": ["node_modules", "dist"]
+  }
 }
