--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx prisma generate && tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "tsc -b && node dist/index.js",
     "prisma:migrate": "npx prisma migrate deploy"
   },
   "keywords": [],
@@ -14,7 +14,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@sendgrid/mail": "^8.1.6",
     "@types/nodemailer": "^7.0.9",
     "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
@@ -25,6 +27,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.13",
+    "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "redis": "^5.10.0",
     "zod": "^4.3.6"
@@ -35,6 +38,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.1.0",
+    "@types/pg": "^8.16.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
